force-app/main/default/objects/Product__c/fields/Available_From_Time__c.field-meta.xml
<CustomField>
    <fullName>Available_From_Time__c</fullName>
    <label>Available From Time</label>
    <type>Time</type>
</CustomField>