force-app/main/default/objects/Product__c/fields/Available_Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock_Quantity__c</fullName>
    <formula>IF(Max_Available_Stock_Quantity_Rollup__c&gt;0,Max_Available_Stock_Quantity_Rollup__c,2147483647)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available_Stock_Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>