force-app/main/default/objects/Product__c/fields/Avialable_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Avialable_End_Time__c</fullName>
    <label>Avialable End Time</label>
    <type>Time</type>
</CustomField>