force-app/main/default/objects/Product__c/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog</label>
    <referenceTo>Catalog__c</referenceTo>
    <relationshipLabel>PMA Products</relationshipLabel>
    <relationshipName>PMA_Products</relationshipName>
    <type>Lookup</type>
</CustomField>