force-app/main/default/objects/Product__c/fields/Default_Price__c.field-meta.xml
<CustomField>
    <fullName>Default_Price__c</fullName>
    <label>Default Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>