force-app/main/default/objects/Product__c/fields/Enable_Order_Fullfillment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Order_Fullfillment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Order Fullfillment</label>
    <type>Checkbox</type>
</CustomField>