force-app/main/default/objects/Product__c/fields/Excluded_Stage__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Stage__c</fullName>
    <description>By default Service visible to all members. Services are excluded when stages are provided.</description>
    <label>Excluded Stage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Appointment No Show</fullName>
            </value>
            <value>
                <fullName>Appointment Completed</fullName>
            </value>
            <value>
                <fullName>Active Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>