force-app/main/default/objects/Product__c/fields/Google_Booking_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Booking_Calendar_Id__c</fullName>
    <inlineHelpText>Google Booking Calendar External Id</inlineHelpText>
    <label>Google Booking Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>