force-app/main/default/objects/Product__c/fields/Google_Place_Holder_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Place_Holder_Calendar_Id__c</fullName>
    <label>Google Place Holder Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>