force-app/main/default/objects/Product__c/fields/Google_Shift_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Shift_Calendar_Id__c</fullName>
    <inlineHelpText>Google Shift Calendar External Id</inlineHelpText>
    <label>Google Shift Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>