force-app/main/default/objects/Product__c/fields/Google_Waitlist_Calendar_Id__c.field-meta.xml
<CustomField>
    <fullName>Google_Waitlist_Calendar_Id__c</fullName>
    <label>Google Waitlist Calendar Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>