force-app/main/default/objects/Product__c/fields/Is_options_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_options_Available__c</fullName>
    <label>Is options Available</label>
    <summaryForeignKey>Product_Option__c.Product__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>