force-app/main/default/objects/Product__c/fields/Is_Product_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Product_Available__c</fullName>
    <formula>IF(Max_Available_Stock_Quantity_Rollup__c &gt; 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is_Product_Available</label>
    <type>Checkbox</type>
</CustomField>