force-app/main/default/objects/Product__c/fields/Max_Available_Stock_Quantity_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Max_Available_Stock_Quantity_Rollup__c</fullName>
    <label>Max Available_Stock_Quantity_Rollup</label>
    <summarizedField>Product_Option__c.Available_Stock_Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Product_Option__c.Is_Option_Available__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product_Option__c.Product__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>