force-app/main/default/objects/Product__c/fields/Max_Price__c.field-meta.xml
<CustomField>
    <fullName>Max_Price__c</fullName>
    <label>Max Price</label>
    <summarizedField>Product_Option__c.Option_Total_Price__c</summarizedField>
    <summaryForeignKey>Product_Option__c.Product__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>