force-app/main/default/objects/Product__c/fields/Meet_Duration__c.field-meta.xml
<CustomField>
    <fullName>Meet_Duration__c</fullName>
    <label>Meet Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <label>30 Minutes</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 Minutes</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>