force-app/main/default/objects/Product__c/fields/Min_Price__c.field-meta.xml
<CustomField>
    <fullName>Min_Price__c</fullName>
    <label>Min Price</label>
    <summarizedField>Product_Option__c.Option_Total_Price__c</summarizedField>
    <summaryForeignKey>Product_Option__c.Product__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>