force-app/main/default/objects/Product__c/fields/Minimum_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Lead_Time__c</fullName>
    <label>Minimum Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <label>30 Minutes</label>
            </value>
            <value>
                <fullName>45</fullName>
                <label>45 Minutes</label>
            </value>
            <value>
                <fullName>60</fullName>
                <label>60 Minutes</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15 Minutes</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>0 Minutes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>