force-app/main/default/objects/Product__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <description>Select Plan for Membership Fees Product</description>
    <inlineHelpText>Select Plan for Membership Fees Product</inlineHelpText>
    <label>Plan</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiation Fees</fullName>
            </value>
            <value>
                <fullName>Membership Fees</fullName>
            </value>
            <value>
                <fullName>Family Add-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>