force-app/main/default/objects/Product__c/fields/Stripe_Product_Default_Price__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_Default_Price__c</fullName>
    <label>Stripe Product Default Price</label>
    <length>50</length>
    <type>Text</type>
</CustomField>