force-app/main/default/objects/Product__c/fields/Stripe_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Product_Id__c</fullName>
    <externalId>true</externalId>
    <label>Stripe Product Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>