force-app/main/default/objects/Product__c/fields/SYS_Key__c.field-meta.xml
<CustomField>
    <fullName>SYS_Key__c</fullName>
    <externalId>true</externalId>
    <label>SYS_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>