force-app/main/default/objects/Product__c/fields/Virtual_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Appointment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Virtual Appointment</label>
    <type>Checkbox</type>
</CustomField>