force-app/main/default/objects/Product__c/validationRules/MembershipPlan_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MembershipPlan_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Product_Family__c , &quot;Membership Fees&quot;),
 ISPICKVAL( Plan__c , &quot;&quot; ) 
)</errorConditionFormula>
    <errorDisplayField>Plan__c</errorDisplayField>
    <errorMessage>Please Select Plan Type for Membership Fee Product</errorMessage>
</ValidationRule>