force-app/main/default/objects/Product__c/validationRules/TimeZone_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>TimeZone_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Allow_scheduling__c =true ,ISPICKVAL(TimeZone__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>TimeZone__c</errorDisplayField>
    <errorMessage>For Scheduling product Time zone is Required</errorMessage>
</ValidationRule>