force-app/main/default/objects/Product__c/listViews/All_AOA_PMA_Products.listView-meta.xml
<ListView>
    <fullName>All_AOA_PMA_Products</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Family__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>AOA PMA</value>
    </filters>
    <label>All AOA PMA Products</label>
</ListView>