force-app/main/default/objects/Product__c/listViews/All_Registration_Fees_Products.listView-meta.xml
<ListView>
    <fullName>All_Registration_Fees_Products</fullName>
    <columns>NAME</columns>
    <columns>Catalog__c</columns>
    <columns>Plan__c</columns>
    <columns>Account__c</columns>
    <columns>Max_Price__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>Membership Fees</value>
    </filters>
    <label>All Registration Fees Products</label>
</ListView>