force-app/main/default/objects/Product__c/listViews/Membership_Fee_Products.listView-meta.xml
<ListView>
    <fullName>Membership_Fee_Products</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Catalog__c</columns>
    <columns>Plan__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Product_Code__c</columns>
    <columns>Stripe_Product_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>Membership Fees</value>
    </filters>
    <label>Membership Fee Products</label>
</ListView>