force-app/main/default/objects/Product__c/listViews/Scheduling.listView-meta.xml
<ListView>
    <fullName>Scheduling</fullName>
    <columns>NAME</columns>
    <columns>Allow_scheduling__c</columns>
    <columns>Meet_Duration__c</columns>
    <columns>Minimum_Lead_Time__c</columns>
    <columns>TimeZone__c</columns>
    <columns>Excluded_Stage__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Family__c</field>
        <operation>equals</operation>
        <value>Scheduling</value>
    </filters>
    <label>Scheduling</label>
</ListView>